--- a/src/GitHub.VisualStudio.UI/Resources.resx
+++ b/src/GitHub.VisualStudio.UI/Resources.resx
@@ -398,4 +398,10 @@
   <data name="OpenFileInSolution" xml:space="preserve">
     <value>Open File in Solution</value>
   </data>
+  <data name="Options_DebuggingTitle" xml:space="preserve">
+    <value>Debugging</value>
+  </data>
+  <data name="Options_EnableTraceLoggingText" xml:space="preserve">
+    <value>Enable Trace Logging</value>
+  </data>
 </root>
